--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -67,11 +67,13 @@ Une technologie qui permet d'isoler le rendu de composants frontend dans une ifr
 - 📖 Beta React docs: [useEffect](https://twitter.com/dan_abramov/status/1575320847279071232) + [useId](https://twitter.com/dan_abramov/status/1577283961763467265) + ["All the commonly used APIs documented"](https://twitter.com/dan_abramov/status/1575367224541560833)
 - 📜 [How to use Serverless Functions with SSR](https://paulie.dev/posts/2022/09/how-to-use-serverless-fucntions-with-ssr/): explique comment partager correctement une fonction entre la partie server/client dans Gatsby
 - 📜 [Fastest Frontend Tooling in 2022](https://cpojer.net/posts/fastest-frontend-tooling-in-2022): Christoph Nakazawa justifie les choix derrière son starter minimaliste [vite-ts-react-tailwind-template](https://github.com/cpojer/vite-ts-react-tailwind-template)
+- 📜 [Improving the accessibility of our Next.js site](https://vercel.com/blog/improving-the-accessibility-of-our-nextjs-site)
 - 📜 [The Orton Effect - dreamy photo effect in CSS and React](https://mikebifulco.com/posts/orton-effect-css-react)
 - 📜 [Mark Erikson - Guide to React Rendering Behavior - updated for React 18](https://twitter.com/acemarke/status/1577301648850014210)
 - 🚧 [no-nested-components ESLint rule](https://github.com/facebook/react/pull/25360): une nouvelle règle pourrait arriver prochainement et éviter de déclarer des composants à la volée (mauvaise pratique).
 - 🧵 [Dan Abramov - "skipping re-renders (eg with memo) is a performance optimization only"](https://twitter.com/dan_abramov/status/1575553047408902147)
 - 🧵 [Andrew Clark - "We've looked very seriously at a WASM rewrite of React"](https://twitter.com/acdlite/status/1576302675766804480)
+- [React Spectrum - React Aria - October 4 releases](https://twitter.com/devongovett/status/1577370727849680896)
 - 📦 [Redwood v3](https://community.redwoodjs.com/t/redwood-3-0-0-is-now-available/3989) + [What's new in Redwood v3?](https://www.youtube.com/watch?v=o9LFWOxMlTs)
 - 📦 [Supabase Pre-built React Auth UI](https://twitter.com/supabase/status/1577215238792916992)
 
@@ -153,7 +155,8 @@ Paris 75008 - 2j de TT/sem.
 - [Astro 1.4](https://astro.build/blog/astro-140/)
 - [Deno 1.26](https://deno.com/blog/v1.26)
 - [Rome 0.10](https://twitter.com/rometools/status/1577296196502278150)
-- [State of CSS Survey 2022](https://stateofcss.com/en-us/)
+- [State of CSS 2022 - Survey open](https://stateofcss.com/en-us/)
+- [State of GraphQL 2022 - Results](https://2022.stateofgraphql.com/en-US/)
 - [Progressively enhance for a more resilient web](https://jjenzz.com/progressively-enhance-for-a-more-resilient-web)
 - [New in Chrome 106](https://developer.chrome.com/blog/new-in-chrome-106/)
 - [New to the web platform in September](https://web.dev/web-platform-09-2022/)
