--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /118
-title: "📨 #118: Gatsby, Beta Docs, Reactivity, Lazy Component Maps, Ezno, Whyframe, Reassure, TypeScript, WASM..."
+title: "📨 #118: Gatsby, Beta Docs, Reactivity, Lazy Maps, Ezno, Whyframe, Reassure, Node.js, TypeScript, WASM..."
 authors: [slorber]
 date: 12-31-2022
 image: /img/TWIR_POST.png
