--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/118/index.mdx
@@ -8,13 +8,17 @@ image: /img/TWIR_POST.png
 
 Salut à tous !
 
-Bonne nouvelle: l'arrivée prochaine de la nouvelle doc React en beta! Un lien sur l'ancienne doc invite à consulter le nouveau site. Gatsby v5 sort alpha. La tendance du moment: apporter la réactivité à React.
+Bonne nouvelle: l'arrivée prochaine de la nouvelle doc React en beta! Un lien sur l'ancienne doc invite à consulter le nouveau site. Gatsby v5 sort alpha.
+
+La tendance du moment: apporter la réactivité à React.
 
 Quelques contenus React-Native sympa également. On surveille de près l'arrivée de Expo Router, WishList et du support web dans Reassure.
 
 TypeScript fête ses 10 ans. Un mode `--watch` arrive dans Node.js. Du contenu intéressant sur WebAssembly.
 
 La conférence [React Brussels](https://www.react.brussels/) a lieu dans à peine 2 semaine, le 14 Octobre 2022. Il ne reste que [quelques places disponibles](https://ti.to/bejs/react-brussels-2022/with/in-person-ticket-copy,group-3-tickets-20,group-4-tickets-25,group-5-tickets-30,student-junior-pass?source=undefined), mais il est aussi possible d'y [assister en ligne](https://ti.to/bejs/react-brussels-2022/discount/online_lastweek).
+
+**💡 [Consulter cette newsletter sur Twitter](https://slo.im/thread) - format visuel 🎨**
 
 <!-- truncate -->
 
