--- a/website/newsletter/118/index.mdx
+++ b/website/newsletter/118/index.mdx
@@ -8,7 +8,7 @@ image: /img/TWIR_POST.png
 
 Hi everyone!
 
-Good news: the new React doc will soon be available in beta! A link on the old doc invites to visit the new site. Gatsby v5 comes out alpha.
+Good news: the new React beta docs will be available soon! A link on the old doc invites to visit the new beta site. Gatsby v5 released alpha.
 
 The current trend: bringing reactivity to React.
 
