--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -2,7 +2,7 @@
 slug: /NUMBER-TODO
 title: "📨 #TEMPLATE: ..."
 authors: [slorber]
-date: 12-31-2022
+date: 12-31-2030 TODO
 image: /img/TWIR_POST.png
 draft: true
 ---
