--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
@@ -23,7 +23,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr)
+
+Avez-vous déjà essayé [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) ? C'est le CMS headless avec un éditeur visuel conçu pour les développeurs et les spécialistes du marketing !
+
+Utilisez Storyblok React SDK pour construire rapidement des composants réutilisables et récupérer le contenu pour créer vos applications, sites Web ou eCommerces React, Next.js, Remix, ou même React-Native.
+
+Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_fr) et découvrez-le vous-même !
 
 ---
 
@@ -37,7 +43,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[**Progressez dans votre anglais professionnel avec Cambly**](https://cambly.info/reacthebdo1)
+
+Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteurs anglophones, quand et où vous voulez. Maîtriser le vocabulaire technique, interagir avec vos collègues ou clients à l'international ou travailler depuis n'importe où dans le monde, nos tuteurs s'adaptent à vos besoins, votre niveau et vos objectifs.
+
+👉 [Faites un cours d'essai gratuit de 15 minutes et profitez de 50% de réduction sur votre abonnement](https://cambly.info/reacthebdo1)
 
 ---
 
@@ -49,7 +59,20 @@ import Support from "../_support.mdx";
 
 ## 🧑‍💻Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Masteos - Lead ReactJS - Hybride ou Remote - 75-90k€**](https://www.welcometothejungle.com/fr/companies/masteos/jobs/lead-front-reactjs-h-f_paris?q=97ae44f44512e0f1968e134f33de64ea&o=1376093)
+
+Masteos réinvente l’expérience de l’investissement locatif, en proposant un parcours entièrement dématérialisé et un accompagnement de haut niveau aux particuliers qui souhaitent acheter un bien pour le louer.
+
+🧑‍💼 [**Matters - Senior Software Engineer (React/Node)**](https://bit.ly/NLReactH)
+
+Envie de challenges et de contribuer à des réussites entrepreneuriales ? Rejoins notre startup studio pour construire des produits variés et complexes dans une culture devOps, une stack JS, des code reviews, tests et déploiements automatisés. Paris, remote flexible, 50K€-65K€.
+
+🧑‍💼 [**Linxea - Lead Dev React.js - 60-75k€**](https://www.welcometothejungle.com/fr/companies/linxea/jobs/lead-dev-react_paris)
+
+Plateforme leader de l’épargne en ligne.
+Stack tech : ReactJS, Redux, Saga, Formik, Storybook, Webpack, Typescript.
+Skills : architecture, développement, pratiques craft (clean architecture, clean code ,TDD), mentoring et formation des équipes.
+Paris 75008 - 2j de TT/sem.
 
 💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
 
