--- a/website/newsletter/119/index.mdx
+++ b/website/newsletter/119/index.mdx
@@ -23,7 +23,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Storyblok](/emails/issues/116/storyblok.png)](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)
+
+Have you already tried [Storyblok](https://www.storyblok.com/?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en)? It's the headless CMS with a Visual Editor designed for both developers and marketers!
+
+Use Storyblok React SDK to quickly build reusable components and fetch the content to create your React, Next.js, Remix, or even React-Native applications, websites or eCommerces.
+
+Check out [Technology Hub](https://www.storyblok.com/technologies?utm_source=thisweekinreact&utm_medium=display&utm_campaign=AWA_SPON_TWIREACT_TRA&utm_content=thisweekinreact_en) and find it out yourself!
 
 ---
 
@@ -37,7 +43,19 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[**React Brussels - IRL & Online React conference - 14 Oct 2022**](https://www.react.brussels/)
+
+React Brussels is back for its first **Hybrid** edition to ever happen in the ❤️of Europe. Talks about the **trendiest tech and skills** (Playwright, WebVR, useEffect, Data Fetching, Remix …) will be on agenda; from some of the **brightest minds** in the React arena; namely :
+
+- Tejas Kumar: DevRel Director - **Xata**
+- Kathleen McMahon: Sr Design System Eng - **Northwestern Mutual**
+- David Khourshid: Founder - **Stately**
+- Shaundai Person: Sr Software Eng - **Netflix**
+- Debbie O'Brien: Sr Program Manager - **Microsoft**
+
+Afterparty, Contests, Job Opportunities, Belgian 🍺, Swag, City Tour ... all is there to last long beyond the conference itself !
+
+IRL tickets are almost **sold-out** ! Be quick, **[Grab yours](https://ti.to/bejs/react-brussels-2022/with/in-person-ticket-copy,group-3-tickets-20,group-4-tickets-25,group-5-tickets-30,student-junior-pass?source=undefined)** and join more than 200 devs celebrating React in-person ! Can't join us? Then, here's your [**30€ online ticket 🎟**](https://ti.to/bejs/react-brussels-2022/discount/online_lastweek) 😜
 
 ---
 
@@ -49,9 +67,15 @@ import Support from "../_support.mdx";
 
 ## 🧑‍💻 Jobs {#jobs}
 
-<Todo />
+🧑‍💼 [**Product Engineer at Causal, Remote/London/NY, $150-250k**](https://jobs.lever.co/causal-app/4acaafbe-ef3d-45a6-bbe6-687c022d727c?lever-origin=applied&lever-source%5B%5D=thisweekinreact.com)
 
-💡 [How to publish an offer ?](https://thisweekinreact.com/sponsor)
+Causal is a Series A Startup (backed by Coatue/Accel) building an all-in-one tool for working with numbers and visualizing data. We're looking for strong React engineers who can solve difficult UX/performance challenges.
+
+🧑‍💼 [**G2i - 100% Remote React Native Jobs**](https://twitter.com/gabe_g2i/status/1563204813881425926?s=20&t=ArRLC77BpRwXXCdx8fnUqw)
+
+We have several roles open for developers focused on React Native! Pay is ~160k plus 10% bonus. You must have production experience with RN and be based in the US. DM [@gabe_g2i](https://twitter.com/gabe_g2i) to learn more and don't forget to mention This Week in React.
+
+💡 [How to publish an offer?](https://thisweekinreact.com/sponsor)
 
 ---
 
