--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
@@ -9,6 +9,12 @@ draft: true
 
 Salut à tous !
 
+ViteConf, Next 13...
+
+BlueHats
+https://communs.numerique.gouv.fr/ateliers/
+https://twitter.com/codegouvfr/status/1579407609643532288
+
 <Todo />
 
 <!-- truncate -->
@@ -35,7 +41,38 @@ Consultez le [Hub Technologique](https://www.storyblok.com/technologies?utm_sour
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Remix, React, and State](https://blog.jim-nielsen.com/2022/remix-react-and-state/)
+
+[How to write your own state management library](https://judehunter.dev/blog/how-to-write-your-own-state-management-library)
+
+[Overcoming Popular Issues With React Projects](https://dinosaurs-with-jetpacks.com/posts/react-problems)
+
+[The future of rendering in React](https://prateeksurana.me/blog/future-of-rendering-in-react/)
+
+[Introducing OG Image Generation: Fast, dynamic social card images at the Edge](https://vercel.com/blog/introducing-vercel-og-image-generation-fast-dynamic-social-card-images)
+
+- https://twitter.com/shuding_/status/1579607964549513217
+
+- 📦 [Tremor 1.0](https://www.tremor.so/): une librairie de composants UI React pour créer des dashboard analytics.
+
+- 👤 Sathya Gunasekaran [rejoins la React core team](https://twitter.com/_gsathya/status/1578816177371250688), probablement [travailler sur le compiler React-Forget](https://twitter.com/Huxpro/status/1578865666010263552)
+
+- 📜 [How to fetch data in React with performance in mind](https://www.developerway.com/posts/how-to-fetch-data-in-react)
+
+- 📜 [Avoid impossible UI states with React, Typescript and xState](https://whereisthemouse.com/avoid-impossible-ui-states-with-react-typescript-and-xstate)
+
+- 📜 [I changed my mind about writing new JavaScript frameworks](https://whitep4nth3r.com/blog/write-a-new-javascript-framework/)
+
+- 📜 [Make your React apps fast again](https://avocadev.hashnode.dev/make-your-react-apps-fast-again)
+
+- 📜 [Build a React Custom Renderer - Part 1](https://www.markcodes.dev/posts/build-react-custom-renderer-part-1)
+- 📜 [Material UI in Storybook](https://storybook.js.org/blog/material-ui-in-storybook/)
+- 📜 [How to Use Sandpack for Code Demos - updated](https://www.ctnicholas.dev/articles/how-to-use-sandpack-for-code-demos) + https://twitter.com/ctnicholasdev/status/1577683748878884864
+- 🌶 [React and Next.js is DEAD — Something New is (Finally) Replacing It (For Good)](https://javascript.plainenglish.io/react-and-next-js-is-dead-something-new-is-finally-replacing-it-for-good-c792c48806f6)
+- 📖 Beta docs: [React.Children](https://twitter.com/dan_abramov/status/1578457525628047360) + [useId](https://twitter.com/dan_abramov/status/1577283961763467265) + [createElement](https://twitter.com/dan_abramov/status/1577463721193897985) + [useImperativeHandle](https://twitter.com/dan_abramov/status/1577717226269966336)
+- 📖 [Next.js on Vercel docs improvements](https://twitter.com/leeerob/status/1577788730349436928)
+- 👥 [Next.js Conf 2022 speakers](https://twitter.com/vercel/status/1578401243243741185)
+- 🐦 [W3C Trusted Types + React + XSS](https://twitter.com/sebastienlorber/status/1579485631260286977)
 
 <SubscribeFormEmbed />
 
@@ -53,7 +90,13 @@ Cambly, c'est la plateforme pour progresser à l'oral en anglais avec des tuteur
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 🎥 [Can It Be Done In React-Native - Season 5 Trailer](https://www.youtube.com/watch?v=GArbi97dV08)
+- 🚧 [Expo Router 0.0.26](https://twitter.com/Baconbrix/status/1578805793733763072) + https://twitter.com/JI/status/1578186941354287104 + https://twitter.com/Baconbrix/status/1577690073906257921
+- 📖 [React-Native docs fully bilingual - Java + Kotlin](https://twitter.com/reactnative/status/1578332414145105921)
+- 🎨 [Expo Router proposal - Splash Screen Orchestration](https://twitter.com/Baconbrix/status/1577690073906257921)
+- 🎨 [Reanimated - useAnimatedKeyboard() demo](https://twitter.com/swmansion/status/1579471824831725571)
+- 📦 [react-native-test-app 2.0](https://twitter.com/lord_sherlock/status/1578312268663906304)
+- 📦 [react-native-quick-sqlite 5.0](https://twitter.com/ospfranco/status/1578145916510273536)
 
 ---
 
@@ -84,16 +127,28 @@ Pas de contenu cette semaine 😅
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[Pourquoi je n'utilise pas Create-React-App](https://www.youtube.com/watch?v=PlIJSUkufuk)
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Deno - The Future of the Web is on the Edge](https://deno.com/blog/the-future-of-web-is-on-the-edge)
+- [New patterns for amazing apps](https://web.dev/new-patterns-for-amazing-apps/)
+- [Playwright Locators APIs inspired by Testing Library](https://twitter.com/diegohaz/status/1578567655493193728)
+- [Optimize long tasks](https://web.dev/optimize-long-tasks/)
+- [Optimizing Interaction to Next Paint (INP)](https://speaking.jeremy.codes/GptKXg/optimizing-interaction-to-next-paint-inp)
+- [Cloudflare Pages gets even faster with Early Hints](https://blog.cloudflare.com/early-hints-on-cloudflare-pages/)
+- [Codesandbox - A Unified CodeSandbox Experience](https://codesandbox.io/post/a-unified-codesandbox-experience)
+- [Safari Technology Preview 155](https://webkit.org/blog/13338/release-notes-for-safari-technology-preview-155/)
+- [Axios 1.0](https://github.com/axios/axios/releases/tag/v1.0.0)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/astrodotbuild/status/1578871432700125185
+
+https://twitter.com/jaredpalmer/status/1578101851114729472
+
+https://twitter.com/kentcdodds/status/1578334293863956480/history
