--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/119/index.mdx
@@ -11,15 +11,9 @@ Salut à tous !
 
 Une semaine avec pas mal de bons articles React. Une innovation Vercel intéressante pour la génération d'images OG.
 
-La ViteConf vient de commencer, il y aura peut-être des annonces la semaine prochaine ;)
+La [ViteConf](https://viteconf.org/) vient de commencer, il y aura sans doute quelques des annonces ;)
 
 Je fais une [présentation Docusaurus ce vendredi avec code.gouv.fr](https://twitter.com/codegouvfr/status/1579407609643532288) (atelier BlueHats organisé par la direction interministérielle du numérique), n'hésitez pas à vous inscrire, c'est ouvert à tous.
-
-BlueHats
-https://communs.numerique.gouv.fr/ateliers/
-https://twitter.com/codegouvfr/status/1579407609643532288
-
-<Todo />
 
 <!-- truncate -->
 
